Commit majeur du répertoire oclint-rules. Ajout/modification des règles CIO/DCNS
Signed-off-by: Tje-CIO <thomas.jeannes@ciose.fr>

--- a/oclint-rules/rules/convention/CMakeLists.txt
+++ b/oclint-rules/rules/convention/CMakeLists.txt
@@ -6,12 +6,17 @@ SET(LIST_OF_RULES
     InvertedLogic
     MissingBreakInSwitchStatement
     NonCaseLabelInSwitchStatement
+    NombresMagiques
     ObjCAssignIvarOutsideAccessors
     ParameterReassignment
     PreferEarlyExit
     SwitchStatementsShouldHaveDefault
     CoveredSwitchStatementsDontNeedDefault
     TooFewBranchesInSwitchStatement
+    PasDeSortiePrematuree
+    ReutilisationVocabulaire
+    InstructionParCondition
+    TypeVariable
     )
 
 BUILD_DYNAMIC_RULES("${LIST_OF_RULES}")
