--- a/oclint-rules/rules/naming/CMakeLists.txt
+++ b/oclint-rules/rules/naming/CMakeLists.txt
@@ -1,6 +1,18 @@
 SET(LIST_OF_RULES
+	ConflitNomVariable
     LongVariableName
     ShortVariableName
+    NommageFichier
+    NommageFonction
+    NommageType
+    NommageMacroConstante    
+    NommageMacroFonction
+    NommageVariableLocaleFonction
+    NommageVariableGenerique
+    NommageVariableGlobale
+    NommageVariableLocaleFichier
+    NommageVariableConstante
+    NommageParametre
     )
 
 BUILD_DYNAMIC_RULES("${LIST_OF_RULES}")
