--- a/oclint-core/lib/CMakeLists.txt
+++ b/oclint-core/lib/CMakeLists.txt
@@ -7,6 +7,7 @@ ADD_LIBRARY(OCLintCore
     Version.cpp
     Violation.cpp
     ViolationSet.cpp
+    RulesBaseId.cpp
     )
 
 IF (${CMAKE_SYSTEM_NAME} MATCHES "Win")
